loleaflet/css/oxool.css
/* ... */
#search-input {
	height: 22px;
	background: var(--color-background-lighter);
}
#search-input:hover {
	border: 1px solid var(--color-border-darker) !important;
}
#search-input::placeholder {
	color: var(--color-main-text);
}

.oxool-character {
	table-layout: fixed;
	font: 17px/1.5 'Helvetica Neue', Arial, Helvetica, sans-serif;
	text-align: center;
}

.oxool-character td {
	width: 20px;
}

.annotation-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: 24px;
	height: 24px;
	background-image: url('images/note.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	outline: none;
}

.oxool-scrolled {
	overflow: auto;
}

.oxool-mobile-container {
	top: 30px;
	margin: 0;
	width: 1px;
	opacity: 0;
}

.oxool-context-down {
	border: 1px solid var(--color-border-dark);
	background-color: var(--color-background-dark);
}

.oxool-mobile-input {
	width: 1px;
	padding: 0px;
	border: 0px;
}

/* Important to override context-menu-icon's font-family here otherwise, jquery-contextmenu.css
 * will try to load its own font file which is not available in dist/ */
.context-menu-list {
	min-width: 0px !important;
}

.context-menu-item {
	margin-left: 3px;
	margin-right: 3px;
	border-radius: 5px;
	font-size: 14px !important;
	padding-top: 3px !important;
	padding-bottom: 3px !important;
	padding-left: 40px !important;
	padding-right: 16px !important;
}

.context-menu-icon::before {
	font-family: var(--oxool-font) !important;
	content: '\2713';
	color: var(--color-main-text) !important;
	width: 16px !important
}

.context-menu-icon:hover::before {
	color: #fff !important;
}

.context-menu-image-icon {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: 16px;
	height: 18px;
	width: 18px;
	background-color: transparent;
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	-moz-background-size: contain;
	-webkit-background-size: contain;
	-o-background-size: contain;
}

.context-menu-separator {
	margin: 3px 0px 3px 32px !important;
	padding: 0px !important;
	border-bottom: 1px solid #bbbbbb !important;
}

.context-menu-hover {
	background-color: var(--doc-identify-color) !important;
	color: #fff !important;
}

.context-menu-hover > span > a {
	color: #fff;
}

.context-menu-submenu.context-menu-hover:after {
	border-color: transparent transparent transparent var(--color-background-lighter);
}

.context-menu-submenu:after {
	right: 6px;
	/*border-color: transparent transparent transparent #2f2f2f;*/
	border-width: 0.3em 0 0.3em 0.3em !important;
}

/* disabled context menu item icon*/
.context-menu-disabled > i {
	filter: grayscale(100%);
	opacity: 0.3;
}

/* disabled context menu item text*/
.context-menu-disabled > span > a {
	color: var(--gray-color);
	cursor: default;
}

.oxool-annotation {
	position: absolute;
	text-align: center;
	user-select: text;
	-moz-user-select: text;
	-webkit-user-select: text;
	-ms-user-select: text;
	z-index: 10;
}

.oxool-annotation:not(annotation-active) .oxool-annotation-collapsed{
	position: absolute;
	left: 24px;
}

.oxool-annotation.annotation-active:not(.rtl) .oxool-annotation-collapsed{
	position: absolute;
	left: 0 !important;
}
.oxool-annotation.annotation-active.rtl .oxool-annotation-collapsed{
	position: absolute;
	left: 48px !important;
}

#document-container > .oxool-annotation:hover .oxool-annotation-collapsed{
	box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%), 0 0 10px 4px rgb(0 0 0 / 10%);
	cursor: pointer;
}

.oxool-annotation-content-wrapper, .oxool-annotation-redline-content-wrapper {
	padding: 8px;
	font-family: var(--oxool-font) !important;
	font-size: var(--default-font-size);
	text-align: left;
	background-color: var(--color-background-lighter);
	box-shadow: 0 0 3px var(--color-box-shadow);
	color: var(--color-main-text);
	border: none;
	border-radius: var(--border-radius);
	width: 240px;
}
.oxool-annotation-content-wrapper:hover, .oxool-annotation-redline-content-wrapper:hover {
	background-color: var(--color-background-dark);
	color: var(--color-text-dark);
}

.annotation-active.modify-annotation-container .oxool-annotation-content-wrapper,
.annotation-active.reply-annotation-container .oxool-annotation-content-wrapper {
	min-width: 240px;
	width: auto;
}

.oxool-annotation-content {
	margin: 3px;
	line-height: 1.4;
}

/* 註解串數量 */
.oxool-annotation-reply-count-collapsed {
	background-color: var(--color-primary-lighter);
	color: var(--color-primary-text);
	font-weight: bold;
	font-family: var(--oxool-font);
	font-size: 20px;
	border: 1px solid var(--color-primary);
	border-radius: 50%;
	z-index: 10;
	position: absolute;
	width: 24px;
	height: 24px;
	left: 26px;
	top: -10px;
}

#main-document-content {
	z-index: 0;
}

#main-document-content .oxool-annotation-reply-count-collapsed {
	background: rgb(var(--color-primary));
}

.oxool-annotation-collapsed {
	background: var(--color-background-lighter);
	border-radius: 50%;
	width: 36px;
	height: 36px;
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.annotation-active .oxool-annotation-collapsed {
	box-shadow: 0 0 3px 5px var(--color-background-lighter), 0 0 1px 5px var(--color-box-shadow);
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup {
	border-radius: 8px !important;
	border: 1px solid var(--color-border) !important;
	background: var(--color-background-lighter) !important;
}

#mobile-wizard-popup {
	background-color: var(--color-background-lighter) !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .lokdialog.ui-dialog-content {
	background-color: transparent !important;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation {
	margin-bottom: 16px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:last-of-type {
	margin-bottom: 8px;
}

.jsdialog-container.oxool-annotation-collapsed.modalpopup .oxool-annotation:first-of-type {
	margin-top: 8px;
}
/* ... */

